# dailybot-miao

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  PROJECT_SUMMARY.md  README.md  dailybot_scheduler.py  main.py  pyproject.toml  requirements.txt  run.py  serve.py  start.bat  start.ps1  stop.bat  使用说明.html
.github/workflows/: release.yml
api/: __init__.py
api/modules/ai/: anthropic.py  ollama.py
api/modules/repo/: gitee.py  github.py
common/: config.py  database.py  logger.py  validator.py
config/: config.yaml
core/: __init__.py  engine.py
crawlers/impl/: gitee_crawler.py  github_crawler.py
crawlers/modules/: base_crawler.py  camouflage_history.py  crawler_manager.py
desktop/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
desktop/electron/main/: index.ts
desktop/electron/preload/: index.ts
desktop/src/: App.vue  vite-env.d.ts
desktop/src/api/: client.ts
devlog/: _misc.md  common.md  config.md  core.md  crawlers.md  desktop.md  oauth.md  prompts.md  providers.md  request.md  scripts.md  tests.md  web.md
docs/adr/: 0001-electron-vue-desktop.md
exceptions/: handler.py
oauth/modules/: oauth_platform_manager.py
prompts/doubao/: camouflage.md  system.md
prompts/global/: system.md
providers/impl/: anthropic_ai.py  deepseek_ai.py  kimi_ai.py  ollama_ai.py
providers/modules/: ai_factory.py
request/core/: api_register.py
scripts/: DailyBot.spec  backfill.py
tests/: test_config.py  test_core_flow.py
utils/: path_helper.py
web/: __init__.py  routes.py
web/static/: dashboard.html
(+19 files in other folders)
